adds pet kind handler
