# swagger/spec.yaml
@@ -727,7 +727,7 @@ paths:
         200:
           description: Equipment edited
           schema:
-            $ref: "#/definitions/Equipment"
+            $ref: "#/definitions/EquipmentResponse"
         default:
           description: Unexpected error.
           schema:
@@ -930,11 +930,106 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+  /pet_kind:
+    get:
+      summary: Get all pet kinds
+      tags:
+        - PetKind
+      operationId: GetAllPetKinds
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/ListOfPetKinds"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error" 
+    post:
+      summary: Register a new pet kind
+      tags:
+        - PetKind
+      operationId: CreateNewPetKind
+      consumes:
+        - application/json
+      parameters:
+        - name: newPetKind
+          in: body
+          description: Create a new pet kind
+          required: true
+          schema:
+            $ref: "#/definitions/PetKind"
+      responses:
+        201:
+          description: Pet size created
+          schema:
+            $ref: "#/definitions/PetKindResponse"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+  /pet_kind/{petKindId}:
+    parameters:
+      - name: petKindId
+        in: path
+        required: true
+        description: pet kind id
+        type: integer
+    get:
+      summary: Get pet kind by id
+      tags:
+        - PetKind
+      operationId: GetPetKind
+      responses:
+        200:
+          description: Pet kind has been found
+          schema:
+            $ref: "#/definitions/PetKindResponse"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+    delete:
+      summary: Delete pet kind by id
+      tags:
+        - PetKind
+      operationId: DeletePetKind
+      responses:
+        200:
+          description: Pet kind has been deleted
+          schema:
+            type: string
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+    put:
+      summary: Edit pet kind by id
+      tags:
+        - PetKind
+      operationId: EditPetKind
+      parameters:
+        - name: EditPetKind
+          in: body
+          description: Edit an pet kind
+          required: true
+          schema:
+            $ref: "#/definitions/PetKind"
+      responses:
+        200:
+          description: Pet kind edited
+          schema:
+            $ref: "#/definitions/PetKindResponse"
+        default:
+          description: Unexpected error.
+          schema:
+            $ref: "#/definitions/Error"
+
 definitions:
   PetKind:
     type: object
     required:
-      - id
+      - name
     properties:
       id:
         type: integer
@@ -952,6 +1047,21 @@ definitions:
             type: string
           message:
             type: string
+  ListOfPetKinds:
+    type: array
+    items:
+      $ref: "#/definitions/PetKindResponse"
+  PetKindResponse:
+    type: object
+    required:
+      - id
+      - name
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+
   PatchTask:
     type: object
     required:
